# Call-Me-Maybe

./: .gitignore  Makefile  README.md  pyproject.toml
data/input/: function_calling_tests.json
data/output/: result.json  results.json  results.jsonl
llm_sdk/llm_sdk/: __init__.py
src/: Function.py  MaskingDependencies.py  json_helpers.py  main.py  schemas.py  validators.py
